# recipes-app

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  env.example
.github/workflows/: tests.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2023-08-17-010041_create_recipe/: down.sql  up.sql
backend/src/: error.rs  jwt.rs  main.rs  schema.rs  tests.rs
backend/src/db/: mod.rs  recipe.rs  user.rs
backend/src/routes/: auth.rs  ingredient_route.rs  mod.rs  recipe_route.rs  step_route.rs  user_route.rs
db/: Cargo.toml  Dockerfile
db/migrations/1_users/: down.sql  up.sql
db/migrations/2_recipe/: up.sql
db/migrations/3_recipe_steps/: down.sql  up.sql
db/migrations/4_recipe_ingredient/: down.sql  up.sql
db/src/: db_pool.rs  lib.rs  schema.rs  structs.rs  tests.rs
db/src/functions/: mod.rs  recipe.rs  recipe_ingredient.rs  recipe_step.rs  user.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  style.css
frontend/assets/style/: notification.scss  notifications_provider.scss  style.css
frontend/src/: main.rs
frontend/src/components/: edit_ingredients.rs  edit_mode.rs  edit_steps.rs  go_home.rs  go_home_component.rs  ingredient_component.rs  ingredient_list_component.rs  input_component.rs  mod.rs  navbar.rs  navbar_component.rs  new_ingredient.rs  new_step.rs  recipe_card_component.rs  recipe_component.rs  recipe_title.rs  steps_component.rs  units.rs
frontend/src/functions/: mod.rs  recipe_functions.rs  user_functions.rs
frontend/src/pages/: home.rs  mod.rs  recipe_list_page.rs  recipe_page.rs
frontend/src/views/: error.rs  home.rs  login.rs  mod.rs  new_recipe.rs  recipe.rs  recipe_editor.rs  recipe_list.rs  register.rs  user_page.rs
