[package]
name = "backend"
version = "0.9.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.31.0",features = ["macros","rt-multi-thread"]}
warp = {version = "0.3.5",features = ["tls"]}
diesel = {version = "2.1.0",features = ["postgres","r2d2"]}
serde = { version = "1" ,features = ["derive"]}
serde_json = "1"
env_logger = "0.5.3"
dotenvy = "0.15"
log = "0.4.1"
db = {version = "*",path = "../db"}
bcrypt = {version="0.15"}
jsonwebtoken = "9.2.0"
