[package]
name = "db"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.0",features = ["postgres","r2d2"]}
r2d2 = "0.8.10"
serde = { version = "1" ,features = ["derive"]}
serde_json = "1"